changing static site url

--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://facerec-d70x.onrender.com/"
+                  href="https://euphonious-haupia-483bbb.netlify.app/"
                 >
                   See Live
                 </a>
@@ -142,7 +142,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="https://facerec-d70x.onrender.com/" target="_blank">
+                <a rel="noreferrer" href="https://euphonious-haupia-483bbb.netlify.app/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
