--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Shirleen</span>
           <br />
-          I'm the Senior Developer.
+          I'm a Full Stack Web Developer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -79,11 +79,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                A Full-stack developer with experience building web applications with a concentration in JavaScipt & React.js. Experienced with Front-End and Back-end tools (CSS, JavaScript, React, Redux, Hooks) to build fully functioned web apps, well-educated with version control, testing, performance & security issues, docker, redis, and CI/CD.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                Passionate to keep learning and improving in web development sector. Aspire to build web apps that make people's live better.
               </p>
               <span class="d-flex mt-3">
                 <a
