--- a/src/index.html
+++ b/src/index.html
@@ -79,10 +79,15 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                A Full-stack developer with experience building web applications with a concentration in JavaScipt & React.js. Experienced with Front-End and Back-end tools (CSS, JavaScript, React, Redux, Hooks) to build fully functioned web apps, well-educated with version control, testing, performance & security issues, docker, redis, and CI/CD.
+                Full-stack developer with experience building web applications with a 
+                concentration in JavaScipt & React.js. Experienced with version control, 
+                Front-End and Back-end tools (CSS, JavaScript, React, Redux, Hooks) to build 
+                fully functional web apps. Currently learning testing, performance & security 
+                issues, docker, redis, and CI/CD.
               </p>
               <p class="about-wrapper__info-text">
-                Passionate to keep learning and improving in web development sector. Aspire to build web apps that make people's live better.
+                Passionate to keep learning and improving in web development sector. 
+                Aspire to build web apps that make people's live better.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -111,21 +116,20 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Face Recognition Brain</h3>
+                <h3 class="project-wrapper__text-title">Faces Recognition Brain</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    A web application that stores user information (name, email, password), 
+                    accepts an image URL as input and uses Clarifai Face Detection Web API to 
+                    detect faces in the image. Built with Javascript, React.js, Node.js, PostgreSQL, 
+                    knex.js, CSS, and HTML. Deployed to Netlify & render.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://euphonious-haupia-483bbb.netlify.app/"
+                  href="https://smartfaces.netlify.app/"
                 >
                   See Live
                 </a>
@@ -141,7 +145,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="https://euphonious-haupia-483bbb.netlify.app/" target="_blank">
+                <a rel="noreferrer" href="https://smartfaces.netlify.app/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -168,11 +172,9 @@
                 <h3 class="project-wrapper__text-title">Robofriends App</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    A fully interactive web application that uses fake REST API 
+                    to generate a random image of robots and let users search 
+                    for the robot's name. Built with React.js, Javascript, Node.js, CSS, and HTML.
                   </p>
                 </div>
                 <a
@@ -219,21 +221,18 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Gradient Background Generator</h3>
+                <h3 class="project-wrapper__text-title">Other Personal Project Website</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Static site with HTML and CSS to display portfolio and other information. 
+                    Deployed to netlify.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://shirleenoey.github.io/Background-Generator2/"
+                  href="https://shirleenoey.github.io/Web-dev-portfolio/index.html"
                 >
                   See Live
                 </a>
@@ -241,7 +240,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="https://github.com/shirleenoey/Background-Generator2"
+                  href="https://github.com/shirleenoey/Web-dev-portfolio"
                 >
                   Source Code
                 </a>
@@ -249,7 +248,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="https://shirleenoey.github.io/Background-Generator2/" target="_blank">
+                <a rel="noreferrer" href="https://shirleenoey.github.io/Web-dev-portfolio/index.html" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -278,7 +277,7 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">Contact me by email to learn more</p>
+          <p class="contact-wrapper__text">Contact me by email for other information</p>
           <a
             rel="noreferrer"
             target="_blank"
