adding project image

--- a/src/index.html
+++ b/src/index.html
@@ -79,14 +79,14 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                Full-stack developer with experience building web applications with a 
+                A Full-stack developer with experience building web applications with a 
                 concentration in JavaScipt & React.js. Experienced with version control, 
                 Front-End and Back-end tools (CSS, JavaScript, React, Redux, Hooks) to build 
                 fully functional web apps. Currently learning testing, performance & security 
                 issues, docker, redis, and CI/CD.
               </p>
               <p class="about-wrapper__info-text">
-                Passionate to keep learning and improving in web development sector. 
+                I am passionate to keep learning and improving in web development sector. 
                 Aspire to build web apps that make people's live better.
               </p>
               <span class="d-flex mt-3">
