updating port website info

--- a/src/index.html
+++ b/src/index.html
@@ -224,8 +224,9 @@
                 <h3 class="project-wrapper__text-title">Other Personal Project Website</h3>
                 <div>
                   <p class="mb-4">
-                    Static site with HTML and CSS to display portfolio and other information. 
-                    Deployed to netlify.
+                    Static site with HTML and CSS to display portfolio and other information.
+                    Highlight: customable color theme with color picker on the right side.
+                    Build with HTML and CSS, deployed to github pages.
                   </p>
                 </div>
                 <a
